<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">thornhil-TravelExpenses</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_claim">New Claim</string>
    <string name="no_claims">Add Claims with + Symbol</string>
    <string name="total">Total: </string>
    <string name="claim_name">Claim Name</string>
    <string name="from_date">From:</string>
    <string name="to_date">To:</string>
    <string name="Save">Save</string>
    <string name="save">Save</string>
    <string name="status">Status:</string>

    <string-array name="Status_Spinner">
        <item>Open</item>
        <item>Returned</item>
        <item>Submitted</item>
        <item>Approved</item>
    </string-array>

    <string name="add_edit_expenses">Add / Edit Expenses</string>
    <string name="edit">edit</string>
    <string name="cant_edit_claim">*You cannot edit a claim with the status &quot;Submitted&quot; or &quot;Approved&quot;</string>
    <string name="title_activity_expense_list">ExpenseListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="no_expenses">Please use the &quot;+&quot; button to add a new Expense for this claim</string>
    <string name="description_hint">Description</string>
    <string name="title_activity_expense_editor">ExpenseEditorActivity</string>
    <string name="date">Date:</string>
    <string name="category">Category:</string>
    <string-array name="currency_spinner">
        <item >CAD</item>
        <item >USD</item>
        <item >EUR</item>
        <item >GBP</item>
    </string-array>

</resources>
