<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/editClaimName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapWords" 
        android:hint="@string/claim_name">

        <requestFocus />
    </EditText>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/from_date"
        android:textStyle="bold"
        android:textSize="25sp"/>
    
    <DatePicker
        android:id="@+id/claimEndDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false" />
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_date"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <DatePicker
        android:id="@+id/claimStartDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false" />

</LinearLayout>