<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cmput301.thornhil_travelexpenses.ExpenseEditorActivity" >

    <EditText 
        android:id="@+id/edit_expense_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapSentences" 
        android:hint="@string/claim_name"/>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textStyle="bold"
        android:textSize="25sp"/>	
        
    <TextView
        android:id="@+id/expense_date_textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:background="@layout/textview_clicked"
        android:padding="10dip"/>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textStyle="bold"
        android:textSize="25sp"/>
    
    <Spinner
	    android:id="@+id/expense_category_spinner"
	    android:layout_width="wrap_content"
	    android:layout_height="0dp"/>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textStyle="bold"
        android:textSize="25sp"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <EditText 
        android:id="@+id/edit_expense_total"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" 
        android:hint="@string/claim_name"/>
        
        <Spinner
		    android:id="@+id/expense_currency_spinner"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"/>
        
    </LinearLayout>
    
    
    

</LinearLayout>
